--- a/text length counter.html
+++ b/text length counter.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="Text-Length-Counter.js"></script>
+  <script src="text-length-counter.js"></script>
 </head>
 <body>
   <h2>Word Counter</h2>
